# smartsdr-codec2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FreeDV.cfg  README.md  main.c  soxr_disable_vfpv4.patch
DSP_API/: CMakeLists.txt  FreeDV.cfg  FreeDV.wxs  Makefile  common.h  main.c  main.h
DSP_API/SmartSDR_Interface/: cmd_basics.c  cmd_engine.c  discovery_client.c  sched_waveform.c
DSP_API/cmake-toolchains/: flex6k.cmake
DSP_API/src/: CMakeLists.txt  api-io.c  api-io.h  api.c  api.h  complex.h  discovery.c  discovery.h  discovery_client.c  freedv-processor.c  freedv-processor.h  hal_buffer.c  hal_buffer.h  sched_waveform.c  sched_waveform.h  smartsdr_dsp_api.c  status_processor.c  traffic_cop.c  utils.c  utils.h  vita-io.c  vita-io.h  vita.h
cmake/: version.cmake
cmake-toolchains/: flex6k.cmake
extras/: Dockerfile  ct-ng.config
src/: CMakeLists.txt  api-io.c  api-io.h  api.c  api.h  discovery.c  discovery.h  dongle_protocol.c  freedv-processor.c  freedv-processor.h  main.c  ringbuf.c  utils.c  utils.h  vita-io.c  vita-io.h
